--- a/tox.ini
+++ b/tox.ini
@@ -1,17 +1,17 @@
 # content of: tox.ini , put in same dir as setup.py
 [tox]
-envlist = py27,py34
+envlist =  py27, py34
 setenv =
-    PYTHONPATH = C:\python34
-    PATH = C:\python34;C:\python34\Scripts
+    PYTHONPATH = C:\Anaconda
+    PATH = C:\Anaconda;C:\Anaconda\Scripts
 
 [testenv]
 deps=nose       #  "pytest" or "nose"
-     coverage
+     
 commands=nosetests  # "py.test" or "nosetests" 
 
 [testenv:py27]
-basepython=C:\python27\python.exe
+basepython=C:\Anaconda\python.exe
 
 [testenv:py34]
 basepython=C:\python34\python.exe
