--- a/setup.cfg
+++ b/setup.cfg
@@ -8,7 +8,7 @@ universal=1
 verbosity=3
 #  with-xunit=1
 #  xunit-file=xunit.xml
-with-coverage=1
+#  with-coverage=1
 #  cover-xml=1
 #  cover-xml-file=coverage.xml
 cover-package=odpslides
